# bincaml

./: bincaml.opam  dune-project  ocaml_of_basil.opam
.github/workflows/: test.yml
docs/dev/: notes.md  readme.md
examples/: x-output.il
lib/: contributing.mld  dune  index.mld  loadir.ml  passes.ml
lib/analysis/: dataflow_graph.ml  defuse_bool.ml  dune  intra_analysis.ml  lattice_types.ml  wrapping_intervals.ml
lib/fe/: AbsBasilIR.ml  BasilIR.cf  ParBasilIR.mly  PrintBasilIR.ml  ShowBasilIR.ml  SkelBasilIR.ml  TestBasilIR.ml
lib/lang/: ID.ml  ast.ml  ast_sandbox.ml  block.ml  cexpr.ml  common.ml  dune  expr.ml  expr_eval.ml  expr_smt.ml  interp.ml  livevars.ml  ops.ml  procedure.ml  prog.ml  program.ml  stmt.ml  types.ml  value.ml  var.ml  viscfg.ml
lib/transforms/: algsimp.ml  cf_tx.ml  cleanup_cfg.ml  dune  ide.ml  intra_analysis.ml  livevars.ml  may_read_uninit.ml  spec_modifies.ml  ssa.ml
lib/util/: ID.ml  bitvec.ml  common.ml  dune  recursionscheme.ml  reverse_graph.ml  types.ml  var.ml  zint.ml
test/: dune  test_expr_print.ml
test/analysis/: dune  ssadfg.ml  wrapping_intervals.ml
test/lang/: dune  expr_eval.ml  expr_eval_expect.ml  expr_eval_qcheck.ml  expr_gen.ml  interp.ml  pagetable_qcheck.ml  pagetable_spec.ml  stmt.ml  value_soundness.ml
